# deicer

./: .env.example  .gitignore  README.md  deicer.py  pyproject.toml
src/: GlacierWrapper.py  delete.py
